# fsconfig

./: CMakeLists.txt  README.md
cmake/: fsconfig-config.cmake.in
example/: CMakeLists.txt  app-settings-example.cpp
include/fsconfig/: fsconfig.hpp
test/: CMakeLists.txt  constructor-test.cpp  is_set-test.cpp  set-test.cpp  sub-test.cpp  subscript-operator-test.cpp  value-test.cpp
test/car/: name
test/car/engine/: capacity  type
